#include "../MessageArea/messagearea.h"
#include "../MessageArea/messagemodel.h"
#include "../../../../usermanager.h"
#include "../../../../Properties/sourcemanager.h"
#include "../../../../tcpmanager.h"
#include "inputarea.h"
#include <QPushButton>
#include <QDir>
#include <QDebug>
#include <QVBoxLayout>
#include <QMenu>
#include <QWidgetAction>
#include <QFileDialog>
#include <QStandardPaths>
#include <QMessageBox>
#include <QPainter>
#include <QPainterPath>
#include <QEvent>
#include <QKeyEvent>
#include <QTextBlock>
#include <QMimeDatabase>
#include <QApplication>
#include <QShortcut>
#include <QMimeData>
#include <QClipboard>
#include <QLabel>
#include <QAudioFormat>
#include <QAudioSource>
#include <QBuffer>
#include <QTimer>
#include <QMediaDevices>
#include <qstyle.h>
#include <QAudioSink>

InputArea::InputArea(QWidget *parent) : QWidget(parent)
{
    setupUI();
    setupConnections();
    setupEmojiMenu();
}

InputArea::~InputArea()
{
}

void InputArea::setupUI()
{
    setMinimumHeight(150);
    setMaximumHeight(400);

    // ä¸»å¸ƒå±€
    QVBoxLayout *mainLayout = new QVBoxLayout(this);
    mainLayout->setContentsMargins(0, 0, 0, 0);
    mainLayout->setSpacing(0);

    // é¡¶éƒ¨æŒ‰é’®å¸ƒå±€
    QHBoxLayout *buttonLayout = new QHBoxLayout;
    buttonLayout->setAlignment(Qt::AlignLeft);
    buttonLayout->setContentsMargins(5,8,0,0);

    // æ–‡ä»¶æŒ‰é’®
    m_fileButton = new QToolButton;
    m_fileButton->setObjectName("fileButton");
    m_fileButton->setToolTip("Files");
    m_fileButton->setIcon(QIcon(":/Resources/main/file.png"));
    m_fileButton->setIconSize({20,20});
    m_fileButton->setFixedSize({30,30});

    // emojiæŒ‰é’®
    m_emojiButton = new QToolButton;
    m_emojiButton->setObjectName("emojiButton");
    m_emojiButton->setToolTip("Emojis");
    m_emojiButton->setIcon(QIcon(":/Resources/main/emoji.png"));
    m_emojiButton->setIconSize({30,30});
    m_emojiButton->setFixedSize({30,30});
    m_emojiButton->setPopupMode(QToolButton::InstantPopup);
    m_emojiButton->setToolButtonStyle(Qt::ToolButtonIconOnly);

    // å›¾ç‰‡æŒ‰é’®
    m_imageButton = new QToolButton;
    m_imageButton->setObjectName("imageButton");
    m_imageButton->setToolTip("Pictures");
    m_imageButton->setIcon(QIcon(":/Resources/main/picture.png"));
    m_imageButton->setIconSize({25,25});
    m_imageButton->setFixedSize({30,30});

    // è§†é¢‘æŒ‰é’®
    m_videoButton = new QToolButton;
    m_videoButton->setObjectName("videoButton");
    m_videoButton->setToolTip("Videos");
    m_videoButton->setIcon(QIcon(":/Resources/main/video.png"));
    m_videoButton->setIconSize({25,25});
    m_videoButton->setFixedSize({30,30});

    // å½•éŸ³æŒ‰é’®
    m_audioButton = new QToolButton;
    m_audioButton->setObjectName("audioButton");
    m_audioButton->setToolTip("Audios");
    m_audioButton->setIcon(QIcon(":/Resources/main/audio.png"));
    m_audioButton->setIconSize({25,25});
    m_audioButton->setFixedSize({30,30});

    // æˆªå±æŒ‰é’®
    m_captureButton = new QToolButton;
    m_captureButton->setObjectName("captureButton");
    m_captureButton->setToolTip("Capture");
    m_captureButton->setIcon(QIcon(":/Resources/main/capture.png"));
    m_captureButton->setIconSize({25,25});
    m_captureButton->setFixedSize({30,30});

    buttonLayout->addWidget(m_fileButton);
    buttonLayout->addWidget(m_emojiButton);
    buttonLayout->addWidget(m_imageButton);
    buttonLayout->addWidget(m_videoButton);
    buttonLayout->addWidget(m_audioButton);
    buttonLayout->addWidget(m_captureButton);
    buttonLayout->setSpacing(8);

    // è¾“å…¥æ¡†
    m_textEdit = new QTextEdit;
    m_textEdit->setPlaceholderText("Enter Message...");
    // è°è¦è¢«è¿‡æ»¤äº‹ä»¶ï¼Œè°å°±å®‰è£…è¿‡æ»¤å™¨ï¼Œè°è¦ç®¡ç†è¿‡æ»¤äº‹ä»¶ï¼Œå°±è®¾ç½®ä¸ºè¿‡æ»¤å™¨çš„å¯¹è±¡ã€‚
    // è¿™æ ·ï¼Œå®‰è£…è¿‡æ»¤å™¨çš„å¯¹è±¡çš„äº‹ä»¶å°±ä¼šå…ˆå‘ç»™è¿‡æ»¤å™¨å¯¹è±¡å¤„ç†
    // è¢«ç›‘æ§å¯¹è±¡->installEventFilter(ç›‘æ§è€…);
    m_textEdit->installEventFilter(this);   // äº‹ä»¶è¢«thisè¿‡æ»¤
    m_textEdit->setAcceptRichText(true);
    m_textEdit->setMinimumHeight(80);
    m_textEdit->setObjectName("textEdit");

    // è®¾ç½®å­—ä½“
    QFont font("Microsoft YaHei", 12);
    m_textEdit->setFont(font);

    // å‘é€æŒ‰é’®
    m_sendButton = new QPushButton("å‘é€");
    m_sendButton->setObjectName("sendButton");
    m_sendButton->setFixedSize(60, 30);
    m_sendButton->setEnabled(false); // åˆå§‹ç¦ç”¨

    // å‘é€æŒ‰é’®å¸ƒå±€
    QHBoxLayout *sendButtonLayout = new QHBoxLayout;
    sendButtonLayout->setContentsMargins(0,0,0,0);
    sendButtonLayout->addStretch(); // æ·»åŠ å¼¹æ€§ç©ºé—´
    sendButtonLayout->addWidget(m_sendButton);

    mainLayout->addLayout(buttonLayout);
    mainLayout->addWidget(m_textEdit,1);
    mainLayout->addStretch();  // è¿™ä¼šè®©æŒ‰é’®ä¿æŒåœ¨åº•éƒ¨
    mainLayout->addLayout(sendButtonLayout); // ä½¿ç”¨å¸ƒå±€è€Œä¸æ˜¯ç›´æ¥æ·»åŠ æŒ‰é’®
}

void InputArea::setupConnections()
{
    connect(m_sendButton, &QPushButton::clicked, this, &InputArea::do_send_clicked);
    connect(m_imageButton, &QToolButton::clicked, this, &InputArea::do_image_clicked);
    connect(m_videoButton, &QToolButton::clicked, this, &InputArea::do_video_clicked);
    connect(m_audioButton, &QToolButton::clicked, this, &InputArea::do_audio_clicked);
    connect(m_fileButton, &QToolButton::clicked, this, &InputArea::do_file_clicked);
    connect(m_textEdit, &QTextEdit::textChanged, this, &InputArea::do_text_changed);
    connect(m_captureButton, &QToolButton::clicked, this, &InputArea::do_capture_clicked);
    connect(m_fileButton, &QToolButton::clicked, this, &InputArea::do_file_clicked);
    connect(this,&InputArea::on_message_sent,this,&InputArea::do_message_sent);
}

void InputArea::setupEmojiMenu()
{
    m_emojiMenu = new QMenu(this);
    m_emojiMenu->setObjectName("emojiMenu");
    // å¸¸ç”¨è¡¨æƒ…åˆ†ç±»
    QStringList emojiCategories = {
        // ç¬¬ä¸€ç±»ï¼šå¼€å¿ƒè¡¨æƒ…
        "ğŸ˜€", "ğŸ˜ƒ", "ğŸ˜„", "ğŸ˜", "ğŸ˜†", "ğŸ˜…", "ğŸ˜‚", "ğŸ¤£", "ğŸ˜Š", "ğŸ˜‡",

        // ç¬¬äºŒç±»ï¼šçˆ±å¿ƒå’Œäº²å»è¡¨æƒ…
        "ğŸ™‚", "ğŸ™ƒ", "ğŸ˜‰", "ğŸ˜Œ", "ğŸ˜", "ğŸ¥°", "ğŸ˜˜", "ğŸ˜—", "ğŸ˜™", "ğŸ˜š",

        // ç¬¬ä¸‰ç±»ï¼šæç¬‘å’Œèªæ˜è¡¨æƒ…
        "ğŸ˜‹", "ğŸ˜›", "ğŸ˜", "ğŸ˜œ", "ğŸ¤ª", "ğŸ¤¨", "ğŸ§", "ğŸ¤“", "ğŸ˜", "ğŸ¤©",

        // ç¬¬å››ç±»ï¼šåº†ç¥å’Œæ¶ˆæè¡¨æƒ…
        "ğŸ¥³", "ğŸ˜", "ğŸ˜’", "ğŸ˜", "ğŸ˜”", "ğŸ˜Ÿ", "ğŸ˜•", "ğŸ™", "â˜¹ï¸", "ğŸ˜£",

        // ç¬¬äº”ç±»ï¼šæ‚²ä¼¤å’Œç”Ÿæ°”è¡¨æƒ…
        "ğŸ˜–", "ğŸ˜«", "ğŸ˜©", "ğŸ¥º", "ğŸ˜¢", "ğŸ˜­", "ğŸ˜¤", "ğŸ˜ ", "ğŸ˜¡",

        // ç¬¬å…­ç±»ï¼šçˆ±å¿ƒé¢œè‰²
        "â¤ï¸", "ğŸ§¡", "ğŸ’›", "ğŸ’š", "ğŸ’™", "ğŸ’œ", "ğŸ–¤", "ğŸ¤", "ğŸ¤",

        // ç¬¬ä¸ƒç±»ï¼šæ‰‹åŠ¿
        "ğŸ‘", "ğŸ‘", "ğŸ‘Œ", "ğŸ¤", "âœŒï¸", "ğŸ¤", "ğŸ¤Ÿ", "ğŸ¤˜", "ğŸ‘ˆ", "ğŸ‘‰",

        // ç¬¬å…«ç±»ï¼šåŠ¨ç‰©
        "ğŸ¶", "ğŸ±", "ğŸ­", "ğŸ¹", "ğŸ°", "ğŸ¦Š", "ğŸ»", "ğŸ¼", "ğŸ¨", "ğŸ¯"
    };

    // æ¯è¡Œæ˜¾ç¤º10ä¸ªè¡¨æƒ…
    int emojisPerRow = 10;

    for (int i = 0; i < emojiCategories.size(); i += emojisPerRow) {
        QWidget *emojiWidget = new QWidget;
        QHBoxLayout *layout = new QHBoxLayout(emojiWidget);
        layout->setAlignment(Qt::AlignHCenter);
        layout->setSpacing(2);
        layout->setContentsMargins(2, 2, 2, 2);

        // æ·»åŠ å½“å‰è¡Œçš„è¡¨æƒ…
        for (int j = i; j < qMin(i + emojisPerRow, emojiCategories.size()); j++) {
            QString emoji = emojiCategories[j];

            QPushButton *emojiBtn = new QPushButton(emoji);
            emojiBtn->setFixedSize(30, 30);
            emojiBtn->setStyleSheet("background:transparent;");
            emojiBtn->setFont(QFont("Segoe UI Emoji", 12));
            connect(emojiBtn, &QPushButton::clicked, [this, emoji]() {
                insertEmoji(emoji);
            });
            layout->addWidget(emojiBtn);
        }

        QWidgetAction *action = new QWidgetAction(m_emojiMenu);
        action->setDefaultWidget(emojiWidget);
        m_emojiMenu->addAction(action);
    }

    m_emojiButton->setMenu(m_emojiMenu);
}

void InputArea::showAudioDialog()
{
    QDialog*recordDialog = new QDialog(this);
    recordDialog->setWindowTitle("å½•éŸ³");
    // recordDialog->setAttribute(Qt::WA_TranslucentBackground);
    recordDialog->setFixedSize({400,300});
    recordDialog->setStyleSheet(R"(
        QDialog {
            background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
                                       stop:0 #2c3e50, stop:1 #34495e);
            color: white;
            border-radius:12px;
        }
        QPushButton {
            background: #3498db;
            color: white;
            border: none;
            padding: 10px 20px;
            border-radius: 5px;
            font-size: 14px;
            min-width: 50px;
        }
        QPushButton:hover {
            background: #2980b9;
        }
        QPushButton:pressed {
            background: #21618c;
        }
        QPushButton[state="recording"] {
            background: #e74c3c;
        }
        QPushButton[state="recording"]:hover {
            background: #c0392b;
        }
        QPushButton[state="stopped"] {
            background: #2ecc71;
        }
        QPushButton[state="stopped"]:hover {
            background: #27ae60;
        }
        QLabel {
            color: white;
            font-size: 14px;
        }
    )");

    QVBoxLayout *mainLayout = new QVBoxLayout(recordDialog);

    // æ³¢å½¢å›¾
    QLabel *waveformLabel = new QLabel;
    waveformLabel->setFixedHeight(120);
    waveformLabel->setStyleSheet("background: #1a252f; border-radius: 10px;");
    waveformLabel->setAlignment(Qt::AlignCenter);

    // æ—¶é—´
    QLabel *timeLabel = new QLabel("00:00");
    timeLabel->setStyleSheet("font-size: 24px; font-weight: bold; color: #ecf0f1;");
    timeLabel->setAlignment(Qt::AlignCenter);

    // çŠ¶æ€æ˜¾ç¤º
    QLabel *statusLabel = new QLabel("å‡†å¤‡å½•éŸ³");
    statusLabel->setAlignment(Qt::AlignCenter);

    // æ§åˆ¶æŒ‰é’®
    QHBoxLayout *buttonLayout = new QHBoxLayout;

    QPushButton *recordButton = new QPushButton("å¼€å§‹å½•éŸ³");
    recordButton->setProperty("state", "stopped");

    QPushButton *playButton = new QPushButton("æ’­æ”¾");
    playButton->setEnabled(false);

    QPushButton *sendButton = new QPushButton("å‘é€");
    sendButton->setEnabled(false);

    QPushButton *cancelButton = new QPushButton("å–æ¶ˆ");

    buttonLayout->addWidget(recordButton);
    buttonLayout->addWidget(playButton);
    buttonLayout->addWidget(sendButton);
    buttonLayout->addWidget(cancelButton);

    mainLayout->addWidget(waveformLabel);
    mainLayout->addWidget(timeLabel);
    mainLayout->addWidget(statusLabel);
    mainLayout->addLayout(buttonLayout);

    // å½•éŸ³ç›¸å…³å˜é‡
    QAudioFormat format;
    format.setSampleRate(44100);
    format.setChannelCount(1);
    format.setSampleFormat(QAudioFormat::Int16);

    QAudioSource *audioInput = nullptr;
    QBuffer *audioBuffer = new QBuffer;
    QTimer *recordTimer = new QTimer;
    int recordSeconds = 0;

    QVector<qreal> audioLevels;
    QTimer *waveformTimer = new QTimer;

    // å¼€å§‹/åœæ­¢å½•éŸ³
    connect(recordButton, &QPushButton::clicked, [=, &audioInput, &audioBuffer, &recordSeconds]() mutable {
        if (recordButton->property("state").toString() == "stopped") {
            // å¼€å§‹å½•éŸ³
            QAudioDevice device = QMediaDevices::defaultAudioInput();
            if (device.isNull()) {
                QMessageBox::warning(this, "é”™è¯¯", "æœªæ‰¾åˆ°å½•éŸ³è®¾å¤‡");
                return;
            }

            if (!device.isFormatSupported(format)) {
                QMessageBox::warning(this, "é”™è¯¯", "éŸ³é¢‘æ ¼å¼ä¸æ”¯æŒ");
                return;
            }

            audioInput = new QAudioSource(format, recordDialog);
            audioBuffer->open(QIODevice::WriteOnly);

            audioInput->start(audioBuffer);

            recordButton->setProperty("state", "recording");
            recordButton->setText("åœæ­¢å½•éŸ³");
            statusLabel->setText("å½•éŸ³ä¸­...");
            playButton->setEnabled(false);
            sendButton->setEnabled(false);

            // å¼€å§‹è®¡æ—¶
            recordSeconds = 0;
            recordTimer->start(1000);
            waveformTimer->start(50); // æ›´æ–°æ³¢å½¢

        } else {
            // åœæ­¢å½•éŸ³
            if (audioInput) {
                audioInput->stop();
                audioInput->deleteLater();
                audioInput = nullptr;
            }
            audioBuffer->close();

            recordButton->setProperty("state", "stopped");
            recordButton->setText("å¼€å§‹å½•éŸ³");
            statusLabel->setText("å½•éŸ³å®Œæˆ");
            playButton->setEnabled(true);
            sendButton->setEnabled(true);

            recordTimer->stop();
            waveformTimer->stop();
        }

        // æ›´æ–°æ ·å¼
        recordDialog->style()->unpolish(recordButton);
        recordDialog->style()->polish(recordButton);
        recordButton->update();
    });
    // æ›´æ–°æ—¶é—´æ˜¾ç¤º
    connect(recordTimer, &QTimer::timeout, [=, &recordSeconds]() {
        recordSeconds++;
        int minutes = recordSeconds / 60;
        int seconds = recordSeconds % 60;
        timeLabel->setText(QString("%1:%2")
                               .arg(minutes, 2, 10, QLatin1Char('0'))
                               .arg(seconds, 2, 10, QLatin1Char('0')));
    });

    // æ›´æ–°æ³¢å½¢æ˜¾ç¤º
    connect(waveformTimer, &QTimer::timeout, [=]() mutable{
        updateWaveform(waveformLabel, audioLevels);
    });

    // æ’­æ”¾å½•éŸ³
    connect(playButton, &QPushButton::clicked, [=]() {
        if (audioBuffer && audioBuffer->size() > 0) {
            playAudio(audioBuffer->data());
        }
    });

    connect(sendButton, &QPushButton::clicked, [=]() {
        if (audioBuffer && audioBuffer->size() > 0) {
            sendAudioMessage(audioBuffer->data(), recordSeconds);
            recordDialog->accept();
        }
    });

    connect(cancelButton, &QPushButton::clicked, recordDialog, &QDialog::reject);

    recordDialog->exec();

    // æ¸…ç†èµ„æº
    if (audioInput) {
        audioInput->stop();
        audioInput->deleteLater();
    }
    audioBuffer->deleteLater();
    recordTimer->deleteLater();
    waveformTimer->deleteLater();
}


void InputArea::updateWaveform(QLabel *waveformLabel, QVector<qreal> &audioLevels)
{
    // æ¨¡æ‹ŸéŸ³é¢‘ç”µå¹³æ•°æ®ï¼ˆå®é™…åº”è¯¥ä»éŸ³é¢‘è¾“å…¥è·å–ï¼‰
    static qreal level = 0;
    level =-0.5 + (qSin(QDateTime::currentMSecsSinceEpoch() / 100.0) + 1) / 2;

    // ä¿æŒæœ€è¿‘50ä¸ªç”µå¹³å€¼
    audioLevels.append(level);
    if (audioLevels.size() > 50) {
        audioLevels.removeFirst();
    }

    // åˆ›å»ºæ³¢å½¢å›¾
    QPixmap pixmap(waveformLabel->width(), waveformLabel->height());
    pixmap.fill(Qt::transparent);

    QPainter painter(&pixmap);
    painter.setRenderHint(QPainter::Antialiasing);

    // ç»˜åˆ¶ç½‘æ ¼
    painter.setPen(QPen(QColor(255, 255, 255, 50), 1));
    for (int i = 0; i < waveformLabel->width(); i += 20) {
        painter.drawLine(i, 0, i, waveformLabel->height());
    }
    for (int i = 0; i < waveformLabel->height(); i += 20) {
        painter.drawLine(0, i, waveformLabel->width(), i);
    }

    // ç»˜åˆ¶ä¸­å¿ƒçº¿
    painter.setPen(QPen(QColor(255, 255, 255, 100), 2));
    int centerY = waveformLabel->height() / 2;
    painter.drawLine(0, centerY, waveformLabel->width(), centerY);

    // ç»˜åˆ¶æ³¢å½¢
    if (!audioLevels.isEmpty()) {
        painter.setPen(QPen(QColor(0, 255, 255), 3));

        int step = waveformLabel->width() / audioLevels.size();
        for (int i = 0; i < audioLevels.size() - 1; ++i) {
            int x1 = i * step;
            int x2 = (i + 1) * step;
            int y1 = centerY - audioLevels[i] * centerY;
            int y2 = centerY - audioLevels[i + 1] * centerY;

            painter.drawLine(x1, y1, x2, y2);
        }

        // ç»˜åˆ¶å®æ—¶ç”µå¹³ç‚¹
        painter.setBrush(QBrush(QColor(255, 100, 100)));
        painter.setPen(Qt::NoPen);
        int lastX = (audioLevels.size() - 1) * step;
        int lastY = centerY - audioLevels.last() * centerY;
        painter.drawEllipse(lastX - 3, lastY - 3, 6, 6);
    }

    waveformLabel->setPixmap(pixmap);
}

void InputArea::playAudio(const QByteArray &audioData)
{
    // å®ç°éŸ³é¢‘æ’­æ”¾
    QBuffer *playBuffer = new QBuffer;
    playBuffer->setData(audioData);
    playBuffer->open(QIODevice::ReadOnly);

    QAudioFormat format;
    format.setSampleRate(44100);
    format.setChannelCount(1);
    format.setSampleFormat(QAudioFormat::Int16);

    QAudioSink *audioOutput = new QAudioSink(format, this);
    audioOutput->start(playBuffer);

    // æ’­æ”¾å®Œæˆåæ¸…ç†
    connect(audioOutput, &QAudioSink::stateChanged, [=](QAudio::State state) {
        if (state == QAudio::IdleState) {
            audioOutput->stop();
            audioOutput->deleteLater();
            playBuffer->deleteLater();
        }
    });
}

void InputArea::sendAudioMessage(const QByteArray &audioData, int duration)
{
    // ä¿å­˜éŸ³é¢‘æ–‡ä»¶
    QString tempPath = QDir::tempPath() + "/audio_" +
                       QString::number(QDateTime::currentMSecsSinceEpoch()) + ".wav";

    // è¿™é‡Œéœ€è¦æ·»åŠ WAVæ–‡ä»¶å¤´å¹¶ä¿å­˜æ•°æ®
    // ç®€åŒ–å¤„ç†ï¼šç›´æ¥ä¿å­˜åŸå§‹æ•°æ®ï¼ˆå®é™…åº”è¯¥æ ¼å¼åŒ–ä¸ºWAVï¼‰
    QByteArray wavData = createWavFile(audioData, duration);

    QFile file(tempPath);
    if (file.open(QIODevice::WriteOnly)) {
        file.write(wavData);
        file.close();
        qDebug() << "WAVæ–‡ä»¶ä¿å­˜æˆåŠŸ:" << tempPath << "å¤§å°:" << wavData.size() << "å­—èŠ‚";
    }

    // åˆ›å»ºéŸ³é¢‘æ¶ˆæ¯
    MessageItem item;
    item.content.type = MessageType::AudioMessage;

    MessageContent content;
    content.type = MessageType::AudioMessage;
    content.data = tempPath;
    content.mimeType = "audio/pcm";

    item.content = content;
    item.from = MessageSource::Me;
    item.env = MessageEnv::Private;
    item.from_id = UserManager::GetInstance()->GetUid();
    item.to_id = UserManager::GetInstance()->GetPeerUid();

    emit on_message_sent(item);

    qDebug() << "å‘é€éŸ³é¢‘æ¶ˆæ¯ï¼Œæ—¶é•¿:" << duration << "ç§’";
}

QByteArray InputArea::createWavFile(const QByteArray &pcmData, int duration) const
{
    int sampleRate = 44100;
    int numChannels = 1;
    int bitsPerSample = 16;
    int byteRate = sampleRate * numChannels * bitsPerSample / 8;
    int blockAlign = numChannels * bitsPerSample / 8;
    int dataSize = pcmData.size();
    int fileSize = 36 + dataSize;

    QByteArray wavData;
    QDataStream stream(&wavData, QIODevice::WriteOnly);
    stream.setByteOrder(QDataStream::LittleEndian);

    // RIFF header
    stream.writeRawData("RIFF", 4);
    stream << quint32(fileSize);
    stream.writeRawData("WAVE", 4);

    // fmt chunk
    stream.writeRawData("fmt ", 4);
    stream << quint32(16);        // Chunk size
    stream << quint16(1);         // Audio format (1 = PCM)
    stream << quint16(numChannels); // Number of channels
    stream << quint32(sampleRate);   // Sample rate
    stream << quint32(byteRate);     // Byte rate
    stream << quint16(blockAlign);   // Block align
    stream << quint16(bitsPerSample); // Bits per sample

    // data chunk
    stream.writeRawData("data", 4);
    stream << quint32(dataSize);     // Data size

    // æ·»åŠ  PCM æ•°æ®
    wavData.append(pcmData);

    return wavData;
}

void InputArea::insertImageFromClipboard(const QImage &image)
{
    // ä¿å­˜ä¸ºä¸´æ—¶æ–‡ä»¶
    QString tempPath = QDir::tempPath() + "/tmp_from_quick_chat_clipboard_" + QString::number(QDateTime::currentMSecsSinceEpoch()) + ".png";
    if (!image.save(tempPath, "PNG")) {
        return;
    }
    // å¤ç”¨ä½ å·²æœ‰çš„æ’å…¥é€»è¾‘
    insertImage(tempPath);
}

std::optional<MessageItem> InputArea::parseMessageContent()
{
    MessageItem item;

    QTextDocument*doc = m_textEdit->document();
    QTextBlock currentBlock = doc->begin();
    MessageContent textContent;
    int max = 0;


    QString text =m_textEdit->toPlainText();
    if (!text.trimmed().isEmpty()){ // é‡è¦ï¼è¿‡æ»¤çœ‹ä¸è§çš„å›¾ç‰‡çš„æ–‡æœ¬ä¿¡æ¯
        textContent.type = MessageType::TextMessage;
        textContent.data = text;
        textContent.mimeType = "text/plain";
        max+=text.length();
        if (max > 2048){
            QMessageBox msgBox;
            msgBox.setWindowTitle("Too Long Textï¼");
            msgBox.setText("Too Long Text!");
            msgBox.setIcon(QMessageBox::Warning);
            msgBox.setStandardButtons(QMessageBox::Ok);

            // macOS é£æ ¼æ ·å¼è¡¨
            msgBox.setStyleSheet(R"(
                QMessageBox {
                    background-color: #f5f5f7;
                    border: 1px solid #d0d0d0;
                    border-radius: 10px;
                    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
                }
                QMessageBox QLabel {
                    color: #1d1d1f;
                    font-size: 14px;
                    font-weight: 400;
                    padding: 15px;
                }
                QMessageBox QLabel#qt_msgbox_label {
                    min-width: 300px;
                }
                QMessageBox QPushButton {
                    background-color: #007aff;
                    color: white;
                    border: none;
                    border-radius: 6px;
                    padding: 8px 24px;
                    font-size: 13px;
                    font-weight: 500;
                    min-width: 80px;
                    margin: 5px;
                }
                QMessageBox QPushButton:hover {
                    background-color: #0056d6;
                }
                QMessageBox QPushButton:pressed {
                    background-color: #0040a8;
                }
                QMessageBox QPushButton:focus {
                    outline: 2px solid #007aff;
                    outline-offset: 2px;
                }
            )");

            msgBox.exec();
            return std::nullopt;
        }
    }
    item.content = textContent;
    item.from = MessageSource::Me;
    item.env = MessageEnv::Private;
    item.from_id = UserManager::GetInstance()->GetUid();
    item.to_id = UserManager::GetInstance()->GetPeerUid();
    return item;
}

void InputArea::do_send_clicked()
{
    std::optional<MessageItem> item = parseMessageContent();
    if ( item.has_value()) {
        emit on_message_sent(item.value());
        clear();
    }
}

void InputArea::do_emoji_clicked()
{
    // èœå•å·²ç»åœ¨æŒ‰é’®ç‚¹å‡»æ—¶è‡ªåŠ¨æ˜¾ç¤º
}

void InputArea::do_image_clicked()
{
    QString imagePath = QFileDialog::getOpenFileName(
        this,
        "é€‰æ‹©å›¾ç‰‡",
        QStandardPaths::writableLocation(QStandardPaths::PicturesLocation),
        "å›¾ç‰‡æ–‡ä»¶ (*.png *.jpg *.jpeg *.gif *.bmp)"
        );

    if (!imagePath.isEmpty()) {
        //TODO:å›¾ç‰‡
    }
}

void InputArea::do_audio_clicked()
{
    showAudioDialog();
}

void InputArea::do_video_clicked()
{
    QString filePath = QFileDialog::getOpenFileName(this,
                                                    tr("é€‰æ‹©è§†é¢‘æ–‡ä»¶"),
                                                    "",
                                                    tr("è§†é¢‘æ–‡ä»¶ (*.mp4 *.avi *.mov *.mkv *.wmv)"));

    if (!filePath.isEmpty()) {
        // åˆ›å»ºæ¶ˆæ¯é¡¹å¹¶å‘é€
        MessageItem item;
        item.content.type = MessageType::VideoMessage;
        item.to_id = UserManager::GetInstance()->GetPeerUid();

        MessageContent content;
        content.type = MessageType::VideoMessage;
        content.data = filePath;
        content.mimeType = "video/*";

        item.content = content;

        emit on_message_sent(item);
    }
}

void InputArea::do_text_changed()
{
    // æ£€æŸ¥æ˜¯å¦æœ‰å†…å®¹ï¼ˆå»é™¤ç©ºç™½å­—ç¬¦ï¼‰
    bool hasText = !m_textEdit->toPlainText().trimmed().isEmpty();
    m_sendButton->setEnabled(hasText);
}

void InputArea::do_file_clicked()
{
    // å®šä¹‰æ’é™¤çš„æ–‡ä»¶ç±»å‹
    QStringList excludeFilters;
    excludeFilters << "*.png" << "*.jpg" << "*.jpeg" << "*.gif" << "*.bmp" << "*.webp"  // å›¾ç‰‡
                   << "*.mp4" << "*.avi" << "*.mov" << "*.mkv" << "*.wmv" << "*.flv" << "*.webm"; // è§†é¢‘

    // æ„å»ºæ–‡ä»¶è¿‡æ»¤å™¨ï¼ˆæ’é™¤å›¾ç‰‡å’Œè§†é¢‘ï¼‰
    QString fileFilter = tr("æ‰€æœ‰æ–‡ä»¶ (*)");

    // æˆ–è€…å¯ä»¥è®¾ç½®ä¸€äº›å¸¸è§çš„æ–‡æ¡£ç±»å‹
    QString documentFilter = tr("æ–‡æ¡£æ–‡ä»¶ (*.pdf *.doc *.docx *.xls *.xlsx *.ppt *.pptx *.txt *.zip *.rar *.7z)");

    QString selectedFilter;
    QStringList filePaths = QFileDialog::getOpenFileNames(
        this,
        tr("é€‰æ‹©æ–‡ä»¶"),
        QStandardPaths::writableLocation(QStandardPaths::DocumentsLocation),
        documentFilter + ";;" + fileFilter,
        &selectedFilter
        );

    if (filePaths.isEmpty()) {
        return;
    }

    // è¿‡æ»¤æ‰å›¾ç‰‡å’Œè§†é¢‘æ–‡ä»¶
    QStringList filteredFiles;
    for (const QString &filePath : filePaths) {
        QFileInfo fileInfo(filePath);
        QString suffix = fileInfo.suffix().toLower();

        // æ£€æŸ¥æ˜¯å¦æ˜¯å›¾ç‰‡æˆ–è§†é¢‘æ–‡ä»¶
        bool isImage = (suffix == "png" || suffix == "jpg" || suffix == "jpeg" ||
                        suffix == "gif" || suffix == "bmp" || suffix == "webp");
        bool isVideo = (suffix == "mp4" || suffix == "avi" || suffix == "mov" ||
                        suffix == "mkv" || suffix == "wmv" || suffix == "flv" || suffix == "webm");

        if (!isImage && !isVideo) {
            filteredFiles.append(filePath);
        } else {
            qDebug() << "è·³è¿‡æ–‡ä»¶ï¼ˆå›¾ç‰‡æˆ–è§†é¢‘ç±»å‹ï¼‰:" << filePath;
        }
    }

    if (filteredFiles.isEmpty()) {
        QMessageBox::information(this, tr("æç¤º"), tr("é€‰æ‹©çš„æ–‡ä»¶éƒ½æ˜¯å›¾ç‰‡æˆ–è§†é¢‘ç±»å‹ï¼Œè¯·ä½¿ç”¨å¯¹åº”çš„å›¾ç‰‡æˆ–è§†é¢‘æŒ‰é’®å‘é€ã€‚"));
        return;
    }

    // å‘é€æ–‡ä»¶æ¶ˆæ¯
    for (const QString &filePath : filteredFiles) {
        if (!filePath.isEmpty()) {
            // åˆ›å»ºæ¶ˆæ¯é¡¹å¹¶å‘é€
            MessageItem item;
            item.content.type = MessageType::OtherFileMessage;
            item.to_id = UserManager::GetInstance()->GetPeerUid();

            item.content.type = MessageType::OtherFileMessage;
            item.content.data = filePath;
            item.content.mimeType = getMimeTypeForFile(filePath);
            item.content.fid = QUuid::createUuid().toString();

            emit on_message_sent(item);
        }
    }
}

QString InputArea::getMimeTypeForFile(const QString &filePath)
{
    QMimeDatabase mimeDatabase;
    QMimeType mimeType = mimeDatabase.mimeTypeForFile(filePath);
    return mimeType.name();
}



void InputArea::do_capture_clicked()
{

}

void InputArea::do_message_sent(const MessageItem &item)
{
    m_model->addMessage(item);
    // TODO:å‘é€è¯·æ±‚
    auto pb = toPb(item);
    std::string pb_str = pb.SerializeAsString();
    // TcpManager::do_send_data(RequestType::)
}

QString InputArea::getText() const
{
    return m_textEdit->toPlainText();
}

void InputArea::clear()
{
    m_textEdit->clear();
    m_sendButton->setEnabled(false);
}

void InputArea::insertEmoji(const QString &emoji)
{
    m_textEdit->textCursor().insertText(emoji);
    m_textEdit->setFocus();
}

void InputArea::insertText(const QString&text){
    m_textEdit->textCursor().insertText(text);
    m_textEdit->setFocus();
}


void InputArea::setModel(MessageModel *model)
{
    this->m_model = model;
}

QPixmap InputArea::createRoundedPixmap(const QString &imagePath, int size, int radius)
{
    // åŠ è½½åŸå§‹å›¾ç‰‡
    QPixmap original(imagePath);
    if (original.isNull()) {
        return QPixmap();
    }

    // ç¼©æ”¾å›¾ç‰‡
    // QPixmap scaled = original.scaled(size,size,Qt::KeepAspectRatioByExpanding,Qt::SmoothTransformation);
    // QPixmap scaled = original.scaled(200, 100, Qt::IgnoreAspectRatio, Qt::SmoothTransformation);
    QPixmap scaled = SourceManager::GetInstance()->getPixmap(imagePath+"_rounded");

    // // åˆ›å»ºå¸¦åœ†è§’çš„é®ç½©
    QPixmap rounded(scaled.size());
    rounded.fill(Qt::transparent);

    QPainter painter(&rounded);
    painter.setRenderHint(QPainter::Antialiasing);
    painter.setRenderHint(QPainter::SmoothPixmapTransform, true);

    // åˆ›å»ºåœ†è§’è·¯å¾„
    QPainterPath path;
    path.addRoundedRect(0, 0, scaled.width(), scaled.height(), radius, radius);

    painter.setClipPath(path);
    painter.drawPixmap(0, 0, scaled);

    return rounded;
}

// äº‹ä»¶è¿‡æ»¤ï¼Œæ”¯æŒ Ctrl+Enter å‘é€
bool InputArea::eventFilter(QObject *obj, QEvent *event)
{
    // åªå¤„ç† QTextEdit çš„é”®ç›˜äº‹ä»¶
    if (obj == m_textEdit && event->type() == QEvent::KeyPress) {

        QKeyEvent *keyEvent = static_cast<QKeyEvent*>(event);
        // ç²˜è´´
        if (keyEvent->matches(QKeySequence::Paste)) {
            const QClipboard *clipboard = QApplication::clipboard();
            const QMimeData *mimeData = clipboard->mimeData();

            // â‘  ä¼˜å…ˆç²˜è´´å›¾ç‰‡
            if (mimeData->hasImage()) {
                QImage image = qvariant_cast<QImage>(mimeData->imageData());
                if (!image.isNull()) {
                    insertImageFromClipboard(image);
                    return true; // å·²å¤„ç†ï¼Œä¸å†èµ°é»˜è®¤ç²˜è´´
                }
            }

            // â‘¡ å¦‚æœä¸æ˜¯å›¾ç‰‡ï¼Œèµ°é»˜è®¤ç²˜è´´ï¼ˆæ–‡æœ¬ï¼‰
            return false;
        }

        // å¤„ç†å›è½¦é”®
        if (keyEvent->key() == Qt::Key_Return || keyEvent->key() == Qt::Key_Enter) {
            if (keyEvent->modifiers() & Qt::ShiftModifier) {
                // Shift+Enterï¼šå…è®¸é»˜è®¤è¡Œä¸ºï¼ˆæ’å…¥æ¢è¡Œï¼‰
                return false;  // ç»§ç»­ä¼ æ’­ï¼Œè®© QTextEdit æ’å…¥æ¢è¡Œ
            } else {
                do_send_clicked();
                return true;   // äº‹ä»¶å·²å¤„ç†ï¼Œé˜»æ­¢ QTextEdit çš„é»˜è®¤è¡Œä¸º
            }
        }
    }

    // å…¶ä»–äº‹ä»¶äº¤ç»™åŸºç±»å¤„ç†
    return QWidget::eventFilter(obj, event);
}

